Fixes usage in docs

--- a/docs/docs/cmd/spo/tenant/tenant-commandset-get.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-commandset-get.mdx
@@ -9,7 +9,7 @@ Get a ListView Command Set that is installed tenant wide
 ## Usage
 
 ```sh
-spo tenant commandset get [options]
+m365 spo tenant commandset get [options]
 ```
 
 ## Options
