--- a/docs/docs/cmd/spo/tenant/tenant-commandset-list.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-commandset-list.mdx
@@ -9,7 +9,7 @@ Retrieves a list of ListView Command Sets that are installed tenant-wide
 ## Usage
 
 ```sh
-spo tenant commandset list [options]
+m365 spo tenant commandset list [options]
 ```
 
 ## Options
