--- a/docs/docs/cmd/spo/tenant/tenant-commandset-set.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-commandset-set.mdx
@@ -7,7 +7,7 @@ Updates a ListView Command Set that is installed tenant wide.
 ## Usage
 
 ```sh
-spo tenant commandset set [options]
+m365 spo tenant commandset set [options]
 ```
 
 ## Options
