Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,7 +4,16 @@ sidebar_position: 4
 
 # Release notes
 
-## [v6.9.0 (beta)](https://github.com/pnp/cli-microsoft365/releases/tag/v6.9.0)
+## [v6.10.0 (beta)](https://github.com/pnp/cli-microsoft365/releases/tag/v6.10.0)
+
+### Changes
+
+- extended 'spfx project upgrade' with support for 1.18.0-beta.1 [#5184](https://github.com/pnp/cli-microsoft365/issues/5184)
+- extended 'spfx doctor' with support for 1.18.0-beta.1 [#5184](https://github.com/pnp/cli-microsoft365/issues/5184)
+- extended 'spfx project doctor' with support for 1.18.0-beta.1 [#5184](https://github.com/pnp/cli-microsoft365/issues/5184)
+- fixed help for 'cli config' commands [#5202](https://github.com/pnp/cli-microsoft365/issues/5202)
+
+## [v6.9.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.9.0)
 
 ### New commands
 
