--- a/docs/docs/contribute/environment-setup.mdx
+++ b/docs/docs/contribute/environment-setup.mdx
@@ -31,7 +31,7 @@ That's it! If you run `m365 version` now, you will see that you are using the be
 
 :::tip
 
-If you have installed the CLI globally using the `npm i -g @pnp/cli-microsoft365` command, we recommend that you uninstall it before running `npm link`.
+If you have installed the CLI globally using the `npm i -g @pnp/cli-microsoft365` command, we recommend that you uninstall it, using `npm un -g @pnp/cli-microsoft365`, before running `npm link`.
 
 :::
 
