--- a/docs/docs/cmd/planner/bucket/bucket-get.mdx
+++ b/docs/docs/cmd/planner/bucket/bucket-get.mdx
@@ -28,7 +28,7 @@ m365 planner bucket get [options]
 : Title of the plan to which the bucket belongs. Specify either `planId`, `planTitle`, or `rosterId` but not multiple when using `name`.
 
 `--rosterId [rosterId]`
-: ID of the Planner Roster. Specify either `planId`, `planTitle`, or `rosterId` but not multiple.
+: ID of the Planner Roster. Specify either `planId`, `planTitle`, or `rosterId` but not multiple when using `name`.
 
 `--ownerGroupId [ownerGroupId]`
 : ID of the group to which the plan belongs. Specify `ownerGroupId` or `ownerGroupName` when using `planTitle`.
@@ -38,6 +38,14 @@ m365 planner bucket get [options]
 ```
 
 <Global />
+
+## Remarks
+
+:::caution
+
+When using `rosterId`, the command is based on an API that is currently in preview and is subject to change once the API reached general availability.
+
+:::
 
 ## Examples
 
@@ -65,10 +73,10 @@ Gets the Microsoft Planner bucket based on the plan title and owner group ID
 m365 planner bucket get --name "Planner Bucket A" --planTitle "My Plan" --ownerGroupId "ee0f40fc-b2f7-45c7-b62d-11b90dd2ea8e"
 ```
 
-Gets the Microsoft Planner bucket based on the roster ID and owner group ID
+Gets the Microsoft Planner bucket based on the roster ID
 
 ```sh
-m365 planner bucket get --name "Planner Bucket A" --rosterId "RuY-PSpdw02drevnYDTCJpgAEfoI" --ownerGroupId "ee0f40fc-b2f7-45c7-b62d-11b90dd2ea8e"
+m365 planner bucket get --name "Planner Bucket A" --rosterId "RuY-PSpdw02drevnYDTCJpgAEfoI"
 ```
 
 ## Response
