--- a/docs/docs/cmd/planner/bucket/bucket-remove.mdx
+++ b/docs/docs/cmd/planner/bucket/bucket-remove.mdx
@@ -26,7 +26,7 @@ m365 planner bucket remove [options]
 : Title of the plan to which the bucket to remove belongs. Specify either `planId`, `planTitle`, or `rosterId` but not multiple when using `name`.
 
 `--rosterId [rosterId]`
-: ID of the Planner Roster. Specify either `planId`, `planTitle`, or `rosterId` but not multiple.
+: ID of the Planner Roster. Specify either `planId`, `planTitle`, or `rosterId` but not multiple when using `name`.
 
 `--ownerGroupId [ownerGroupId]`
 : ID of the group to which the plan belongs. Specify either `ownerGroupId` or `ownerGroupName` when using `planTitle`.
@@ -39,6 +39,14 @@ m365 planner bucket remove [options]
 ```
 
 <Global />
+
+## Remarks
+
+:::caution
+
+When using `rosterId`, the command is based on an API that is currently in preview and is subject to change once the API reached general availability.
+
+:::
 
 ## Examples
 
@@ -66,10 +74,10 @@ Removes the Microsoft Planner bucket with a name based on the Plan Title and own
 m365 planner bucket remove --name "My Bucket" --planTitle "My Plan" --ownerGroupName "My Group"
 ```
 
-Removes the Microsoft Planner bucket with a name based on the roster ID and owner group name
+Removes the Microsoft Planner bucket with a name based on the roster ID
 
 ```sh
-m365 planner bucket remove --name "My Bucket" --rosterId "RuY-PSpdw02drevnYDTCJpgAEfoI" --ownerGroupName "My Group"
+m365 planner bucket remove --name "My Bucket" --rosterId "RuY-PSpdw02drevnYDTCJpgAEfoI"
 ```
 
 ## Response
