Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,12 @@ sidebar_position: 4
 
 # Release notes
 
+## [v7.0.0 (beta)](https://github.com/pnp/cli-microsoft365/releases/tag/v7.0.0)
+
+### Changes
+
+- renamed confirm to force [#4551](https://github.com/pnp/cli-microsoft365/issues/4551)
+
 ## [v6.10.0 (beta)](https://github.com/pnp/cli-microsoft365/releases/tag/v6.10.0)
 
 ### New commands
