--- a/docs/docs/cmd/teams/chat/chat-member-add.mdx
+++ b/docs/docs/cmd/teams/chat/chat-member-add.mdx
@@ -36,7 +36,13 @@ m365 teams chat member add [options]
 
 ## Remarks
 
-The `role` option can only be used with the value `owner` for internal users and `guest` for guest users. 
+:::info
+
+When you specify a value for `role`, consider the following:
+- it can only be used in combination with the `owner` option for internal users
+- it can only be used in combindation with the `guest` option for guest users
+
+:::
 
 ## Examples
 
