--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -12,6 +12,13 @@ sidebar_position: 4
 - extended 'spfx doctor' with support for 1.18.0-beta.1 [#5184](https://github.com/pnp/cli-microsoft365/issues/5184)
 - extended 'spfx project doctor' with support for 1.18.0-beta.1 [#5184](https://github.com/pnp/cli-microsoft365/issues/5184)
 - fixed help for 'cli config' commands [#5202](https://github.com/pnp/cli-microsoft365/issues/5202)
+- adds 'newClientSideComponentId' option to 'spo tenant applicationcustomizer set'. [#5063](https://github.com/pnp/cli-microsoft365/issues/5063)
+- refactored codebase to async/await - commands 'spo storageentity set' until 'spo tenant commandset get'. [#5108](https://github.com/pnp/cli-microsoft365/issues/5108)
+- refactored codebase to async/await - commands 'spo tenant commandset list' until 'spo term get'. [#5109](https://github.com/pnp/cli-microsoft365/issues/5109)
+- refactored codebase to async/await - commands 'search` until 'spfx project externalize'/DynamicRule. [#5010](https://github.com/pnp/cli-microsoft365/issues/5010)
+- refactored codebase to async/await - commands 'teams chat' and 'teams guestsettings'. [#5090](https://github.com/pnp/cli-microsoft365/issues/5090)
+- refactored codebase to async/await - commands 'teams messagingsettings' and 'teams report'. [#5092](https://github.com/pnp/cli-microsoft365/issues/5092)
+- fixes for async/await refactorings
 
 ## [v6.9.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.9.0)
 
