Changes requested by Milan

--- a/docs/docs/cmd/pa/app/app-permission-list.mdx
+++ b/docs/docs/cmd/pa/app/app-permission-list.mdx
@@ -1,4 +1,6 @@
 import Global from '/docs/cmd/_global.mdx';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # pa app permission list
 
@@ -85,9 +87,9 @@ m365 pa app permission list --appName bc9f0a7e-53df-46af-b669-5888bb2f63d0 --rol
   <TabItem value="Text">
 
   ```text
-  principalId  : fe36f75e-c103-410b-a18a-2bf6df06ac3a
-  principalType: User
-  roleName     : Owner
+  roleName  principalId                           principalType
+  --------  ------------------------------------  -------------
+  Owner     fe36f75e-c103-410b-a18a-2bf6df06ac3a  User
   ```
 
   </TabItem>
