--- a/docs/docs/cmd/cli/config/config-list.mdx
+++ b/docs/docs/cmd/cli/config/config-list.mdx
@@ -1,3 +1,4 @@
+import CLISettings from '/docs/_clisettings.mdx';
 import Global from '/docs/cmd/_global.mdx';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
@@ -16,6 +17,12 @@ m365 cli config list [options]
 
 <Global />
 
+## Available settings
+
+Following is the list of configuration settings available in CLI for Microsoft 365.
+
+<CLISettings />
+
 ## Remarks
 
 You can get the available settings with the `m365 cli config get` command, see [cli config get](./config-get.mdx) for more information.
@@ -29,8 +36,6 @@ m365 cli config list
 ```
 
 ## Response
-
-The response below is an example, this may change depending on the configuration you have set
 
 <Tabs>
   <TabItem value="JSON">
