Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -22,6 +22,12 @@ sidebar_position: 4
 - refactored to async/await 'm365 adaptivecard until m365 booking'. [#4955](https://github.com/pnp/cli-microsoft365/issues/4955)
 - included response output from 'spo site until spo theme' commands. [#3933](https://github.com/pnp/cli-microsoft365/issues/3933)
 - refactored 'spo list roleassignmentx add' to use util. [#5157](https://github.com/pnp/cli-microsoft365/issues/5157)
+- fixed bug where 'spo site apppermission add' does not work for service principals. [#5204](https://github.com/pnp/cli-microsoft365/issues/5204)
+- added socialBarOnSitePagesDisabled option to 'spo site set' command. [#5072](https://github.com/pnp/cli-microsoft365/issues/5072)
+- added output value 'none' to disable any output. [#4804](https://github.com/pnp/cli-microsoft365/issues/4804)
+- refactored to async/await 'spo page column list' until 'spo page section add'. [#5099](https://github.com/pnp/cli-microsoft365/issues/5099)
+- refactored to async/await 'spo propertybag set' until 'spo report siteusagestorage'. [#5101](https://github.com/pnp/cli-microsoft365/issues/5101)
+- refactored to async/await 'spo roledefintion add' until 'spo serviceprincipal permissionrequest list'. [#5102](https://github.com/pnp/cli-microsoft365/issues/5102)
 
 ## [v6.9.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.9.0)
 
