set a tenant commandset

--- a/docs/docs/cmd/spo/tenant/tenant-commandset-set.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-commandset-set.mdx
@@ -13,19 +13,25 @@ m365 spo tenant commandset set [options]
 ## Options
 
 ```md definition-list
-`-i, --id <id>`
-: The id of the ListView Command Set
+`-t, --title [title]`
+: The title of the ListView Command Set to update. Specify either `title`, `id` or `clientSideComponentId`.
 
-`-t, --newTitle [newTitle]`
-: The updated title of the ListView Command Set
+`-i, --id [id]`
+: The id of the ListView Command Set to update. Specify either `title`, `id` or `clientSideComponentId`.
+
+`-c, --clientSideComponentId  [clientSideComponentId]`
+: The Client Side Component Id (GUID) of the ListView Command Set to update. Specify either `title`, `id` or `clientSideComponentId`.
+
+`--newTitle [newTitle]`
+: The updated title of the ListView Command Set.
 
 `-l, --listType [listType]`
 : The list or library type to register the ListView Command Set on. Allowed values `List` or `Library`.
 
-`-c, --clientSideComponentId  [clientSideComponentId]`
-: The Client Side Component Id (GUID) of the ListView Command Set.
+`--newClientSideComponentId  [newClientSideComponentId]`
+: The updated Client Side Component Id (GUID) of the ListView Command Set.
 
-`-p, --clientSideComponentProperties  [clientSideComponentProperties]`
+`-p, --clientSideComponentProperties [clientSideComponentProperties]`
 : The Client Side Component properties of the ListView Command Set.
 
 `-w, --webTemplate [webTemplate]`
@@ -47,16 +53,22 @@ When using the `--clientSideComponentProperties` option it's possible to enter a
 
 ## Examples
 
-Updates the title of a ListView Command Set that's deployed tenant wide.
+Updates the title of a ListView Command Set that's deployed tenant wide by its id.
 
 ```sh
-m365 spo tenant commandset set --id 4  --newTitle "Some customizer"
+m365 spo tenant commandset set --id 4 --newTitle "Some customizer"
 ```
 
-Updates the properties of a ListView Command Set.
+Updates the properties of a ListView Command Set that's deployed tenant wide by its title.
 
 ```sh
-m365 spo tenant commandset  set --id 3  --clientSideComponentProperties '{ "someProperty": "Some value" }'
+m365 spo tenant commandset set --title "Some Command Set" --clientSideComponentProperties '{ "someProperty": "Some value" }'
+```
+
+Updates the Client Side Component Id (GUID) of a ListView Command Set that's deployed tenant wide by its clientSideComponentId.
+
+```sh
+m365 spo tenant commandset set --clientSideComponentId "07ee7d3d-923e-49be-b050-86f53edb45fb" --newClientSideComponentId "b44a5182-9877-4029-baec-0181c70dacbc"
 ```
 
 ## Response
