Extends `spo tenant commandset set`. Closes #4961

--- a/docs/docs/v7-upgrade-guidance.mdx
+++ b/docs/docs/v7-upgrade-guidance.mdx
@@ -10,8 +10,6 @@ In version 7 of the CLI for Microsoft 365, we have removed the option `schemaXml
 
 Remove the references to the option `schemaXml` from your scripts. Verify that your scripts work as intended.
 
-<<<<<<< Updated upstream
-=======
 ## Removed `deleted` option from the `aad user list` command
 
 In version 6 of the CLI for Microsoft 365, you can get the deleted users using the command `aad user list` by giving an option `deleted`. Now we have removed that option from the command. For getting the deleted users, you can use the command [aad user recyclebinitem list ](./cmd/aad/user/user-recyclebinitem-list.mdx)
@@ -20,7 +18,15 @@ In version 6 of the CLI for Microsoft 365, you can get the deleted users using t
 
 Remove the references to the `deleted` option in your scripts. Verify that your scripts are using the command [aad user recyclebinitem list ](./cmd/aad/user/user-recyclebinitem-list.mdx) instead.
 
->>>>>>> Stashed changes
+
+## Updated `spo tenant commandset set` command with more options
+
+In version 6 of the CLI for Microsoft 365, for setting the list commandset, you can only do it using `id` option. Now we have expanded the feature so that you can also update existing commandset using either of `id` or `title` or `clientSideComponentId`.
+
+### What action do I need to take?
+
+Since the option `id` was mandatory in V6 and if your scripts are dependent on the default mandatory error output which the command would return, you may have to update your scripts accordingly.
+
 ## Aligned options with naming convention
 
 In version 7 of the CLI for Microsoft 365, we have made updates to the options for certain commands, aligning with our naming convention. This includes renaming options to ensure consistency and improve the CLI experience. For example, the option `--environment` for the command `m365 pa app consent set` has been changed to `--environmentName`. These changes aim to make it easier for you to use the CLI.
