--- a/docs/docs/cmd/teams/channel/channel-member-add.mdx
+++ b/docs/docs/cmd/teams/channel/channel-member-add.mdx
@@ -25,10 +25,10 @@ m365 teams channel member add [options]
 `--channelName [channelName]`
 : The display name of the Microsoft Teams team channel. Specify either `channelId` or `channelName`, but not both.
 
-`--userId [userId]`
+`--userIds [userIds]`
 : The user's ID or principal name. You can also pass a comma-separated list of userIds.
 
-`--userDisplayName [userDisplayName]`
+`--userDisplayNames [userDisplayNames]`
 : The display name of a user. You can also pass a comma-separated list of display names.
 
 `--owner`
@@ -48,13 +48,13 @@ You can only add members and owners of a team to a private channel.
 Add members to a channel based on their id or user principal name
 
 ```sh
-m365 teams channel member add --teamId 47d6625d-a540-4b59-a4ab-19b787e40593 --channelId 19:586a8b9e36c4479bbbd378e439a96df2@thread.skype --userId "85a50aa1-e5b8-48ac-b8ce-8e338033c366,john.doe@contoso.com"
+m365 teams channel member add --teamId 47d6625d-a540-4b59-a4ab-19b787e40593 --channelId 19:586a8b9e36c4479bbbd378e439a96df2@thread.skype --userIds "85a50aa1-e5b8-48ac-b8ce-8e338033c366,john.doe@contoso.com"
 ```
 
 Add owners to a channel based on their display names
 
 ```sh
-m365 teams channel member add --teamName "Human Resources" --channelName "Private Channel" --userDisplayName "Anne Matthews,John Doe" --owner
+m365 teams channel member add --teamName "Human Resources" --channelName "Private Channel" --userDisplayNames "Anne Matthews,John Doe" --owner
 ```
 
 ## Response
