--- a/docs/docs/cmd/aad/app/app-set.mdx
+++ b/docs/docs/cmd/aad/app/app-set.mdx
@@ -14,34 +14,34 @@ m365 aad app set [options]
 
 ```md definition-list
 `--appId [appId]`
-: Application (client) ID of the Azure AD application registration to update. Specify either `appId`, `objectId` or `name`
+: Application (client) ID of the Azure AD application registration to update. Specify either `appId`, `objectId` or `name`.
 
 `--objectId [objectId]`
-: Object ID of the Azure AD application registration to update. Specify either `appId`, `objectId` or `name`
+: Object ID of the Azure AD application registration to update. Specify either `appId`, `objectId` or `name`.
 
 `--name [name]`
-: Name of the Azure AD application registration to update. Specify either `appId`, `objectId` or `name`
+: Name of the Azure AD application registration to update. Specify either `appId`, `objectId` or `name`.
 
-`-u, --uri [uri]`
-: Comma-separated list of Application ID URIs to update
+`-u, --uris [uris]`
+: Comma-separated list of Application ID URIs to update.
 
 `-r, --redirectUris [redirectUris]`
-: Comma-separated list of redirect URIs to add to the app registration. Requires `platform` to be specified
+: Comma-separated list of redirect URIs to add to the app registration. Requires `platform` to be specified.
 
 `-p, --platform [platform]`
-: Platform for which the `redirectUri` should be configured. Allowed values `spa`, `web`, `publicClient`
+: Platform for which the `redirectUri` should be configured. Allowed values `spa`, `web`, `publicClient`.
 
 `--redirectUrisToRemove [redirectUrisToRemove]`
-: Comma-separated list of existing redirect URIs to remove. Specify, when you want to replace existing redirect URIs with another
+: Comma-separated list of existing redirect URIs to remove. Specify, when you want to replace existing redirect URIs with another.
 
 `--certificateFile [certificateFile]`
-: Path to the file with certificate public key. Specify either `certificateFile` or `certificateBase64Encoded`
+: Path to the file with certificate public key. Specify either `certificateFile` or `certificateBase64Encoded`.
 
 `--certificateBase64Encoded [certificateBase64Encoded]`
-: Base64-encoded string with certificate public key. Specify either `certificateFile` or `certificateBase64Encoded`
+: Base64-encoded string with certificate public key. Specify either `certificateFile` or `certificateBase64Encoded`.
 
 `--certificateDisplayName [certificateDisplayName]`
-: Display name for the certificate. If not given, the displayName will be set to the certificate subject. When specified, also specify either `certificateFile` or `certificateBase64Encoded`
+: Display name for the certificate. If not given, the displayName will be set to the certificate subject. When specified, also specify either `certificateFile` or `certificateBase64Encoded`.
 ```
 
 <Global />
@@ -59,19 +59,19 @@ When a certificate is specified it will be added to the list of certificates of 
 Update the app URI of the Azure AD application registration specified by its object ID
 
 ```sh
-m365 aad app set --objectId d75be2e1-0204-4f95-857d-51a37cf40be8 --uri https://contoso.com/e75be2e1-0204-4f95-857d-51a37cf40be8
+m365 aad app set --objectId d75be2e1-0204-4f95-857d-51a37cf40be8 --uris https://contoso.com/e75be2e1-0204-4f95-857d-51a37cf40be8
 ```
 
 Update the app URI of the Azure AD application registration specified by its app (client) ID
 
 ```sh
-m365 aad app set --appId e75be2e1-0204-4f95-857d-51a37cf40be8 --uri https://contoso.com/e75be2e1-0204-4f95-857d-51a37cf40be8
+m365 aad app set --appId e75be2e1-0204-4f95-857d-51a37cf40be8 --uris https://contoso.com/e75be2e1-0204-4f95-857d-51a37cf40be8
 ```
 
 Update the app URI of the Azure AD application registration specified by its name
 
 ```sh
-m365 aad app set --name "My app" --uri https://contoso.com/e75be2e1-0204-4f95-857d-51a37cf40be8
+m365 aad app set --name "My app" --uris https://contoso.com/e75be2e1-0204-4f95-857d-51a37cf40be8
 ```
 
 Add a new redirect URI for SPA authentication
