Updates 'spo tenant applicationcustomizer get' command. Closes #4872

--- a/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-get.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-get.mdx
@@ -19,7 +19,7 @@ m365 spo tenant applicationcustomizer get [options]
 : The title of the application customizer. Specify either `title`, `id`, or `clientSideComponentId`.
 
 `-i, --id [id]`
-: The product id of the application customizer. Specify either `title`, `id`, or `clientSideComponentId`.
+: The id of the application customizer. Specify either `title`, `id`, or `clientSideComponentId`.
 
 `-c, --clientSideComponentId  [clientSideComponentId]`
 : The Client Side Component Id (GUID) of the application customizer. Specify either `title`, `id`, or `clientSideComponentId`.
@@ -38,7 +38,7 @@ m365 spo tenant applicationcustomizer get --title "Some customizer"
 Retrieves an application customizer by id.
 
 ```sh
-m365 spo tenant applicationcustomizer get --id 14125658-a9bc-4ddf-9c75-1b5767c9a337
+m365 spo tenant applicationcustomizer get --id 3
 ```
 
 Retrieves an application customizer by clientSideComponentId.
