Last mile changes

--- a/docs/docs/cmd/aad/user/user-get.mdx
+++ b/docs/docs/cmd/aad/user/user-get.mdx
@@ -28,7 +28,7 @@ m365 aad user get [options]
 : Comma-separated list of properties to retrieve.
 
 `--withManager`
-: Retrieve the direct manager for the user.
+: Retrieve the direct manager of the user.
 ```
 
 <Global />
