--- a/docs/docs/contribute/expect-during-pr.mdx
+++ b/docs/docs/contribute/expect-during-pr.mdx
@@ -20,7 +20,7 @@ PRs are reviewed in the order of their submission, and once reviewed, they are m
 
 When your PR is under review, the assigned maintainer will indicate their involvement by assigning themselves to the PR. They will follow a checklist for the review process, which can be found [here](https://github.com/pnp/cli-microsoft365/wiki/PR-checklist).
 
-Maintainers may also provide suggestions for best practices to ensure consistent coding styles. If there are code-related comments, you will see "changes requested" next to your username in the PR. In case the maintainer needs your input on an issue before continuing the review, the PR will be labeled as "waiting on response." The reviewer may also mark the pull request as **Draft** to indicate that it is a work in progress and changes are expected.
+Maintainers may also provide suggestions for best practices to ensure consistent coding styles. If there are code-related comments, you will see "changes requested" next to your username in the PR. In case the maintainer needs your input on an issue before continuing the review, the PR will be labelled as "waiting on response." The reviewer will also mark the pull request as **Draft** to indicate that it is `work in progress` and that changes are expected to be made.
 
 ## Updating the PR after Feedback
 
