--- a/docs/docs/contribute/how-to-debug.mdx
+++ b/docs/docs/contribute/how-to-debug.mdx
@@ -102,6 +102,6 @@ Be sure that the debug configuration is set to `Debug Tests` and **not** to `Deb
 
 :::
 
-### Using the AddOn 'Test Explorer'
+### Using Test Explorer UI VSCode Extension
 
 [Test Explorer](https://marketplace.visualstudio.com/items?itemName=hbenl.vscode-test-explorer) provides an extensible user interface for running your tests in VS Code. This will add an extra tab in your activity bar named `Testing`. When you open this, you should see all the commands written for the CLI for Microsoft 365, grouped by their utility. Here you have the option to run all the tests, by clicking the play button next to the title. Or we can only run a certain command, by clicking the play button next to the command name. This will visually display the status of every command. If a command fails, you can select it and view the logs to see what went wrong. You can also go even deeper by starting a debugger for a single test.
